web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-generator-variable-declaration/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,21)
1|function *g() { var yield; }
 |                   ^
